# celtic-names

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  azure-pipelines.yml
.github/: dependabot.yml
.github/workflows/: coverage.yml  release.yml  rust.yml  tests.yml
src/: main.rs  markov.rs  markov_chain.rs  name_generator.rs  name_scraper.rs  scraper.rs
