[package]
name = "celtic-names"
version = "1.0.0"
authors = ["Adilson Neto <almeidneto@gmail.com>"]
edition = "2018"

readme = "README.md"
keywords = [ "procedural" ]
categories = [ "game-development" ]
description = "A celtic name generator"
repository = "https://github.com/aaneto/celtic-names"
license = "MIT"

[dependencies]
ureq = "2.0.2"
scraper = "0.12.0"
rand = "0.8.3"
clap = "2.33.0"
markov = "1.0.2"
dont_disappear = "3.0.0"
